Revert "Refactor getParamsExcept() from XDIP"
This reverts commit 7122a99875e11927d6c0eaf77f9cb4a2f76ba39f.